fixed caption alignment & redditlink style bug

--- a/assets/scss/components/article.scss
+++ b/assets/scss/components/article.scss
@@ -154,6 +154,13 @@
 	color: var(--color-text-footer);
 }
 
+.redditlink {
+	@include margin-0;
+	@include text-xs;
+	text-align: center;
+	color: var(--color-text-footer);
+}
+
 @keyframes whirlyAnimate {
 	0%   { font-variation-settings: "anim" 100; }
 	100% { font-variation-settings: "anim" 200; }
